--- a/Statistical Analysis.ipynb
+++ b/Statistical Analysis.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 783,
    "metadata": {},
    "outputs": [
     {
@@ -833,76 +833,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>0.654005</td>\n",
-       "      <td>0.522399</td>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>2.071203</td>\n",
+       "      <td>0.054870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>California</td>\n",
-       "      <td>1.809021</td>\n",
-       "      <td>0.089276</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>1.366664</td>\n",
+       "      <td>0.190629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>3.006552</td>\n",
-       "      <td>0.008364</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>2.743740</td>\n",
+       "      <td>0.014418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Maine</td>\n",
-       "      <td>5.461477</td>\n",
-       "      <td>0.000052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>4.255550</td>\n",
-       "      <td>0.000604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Nevada</td>\n",
-       "      <td>1.752150</td>\n",
-       "      <td>0.098887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Oregon</td>\n",
-       "      <td>2.384878</td>\n",
-       "      <td>0.029802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Washington D.C.</td>\n",
-       "      <td>1.732862</td>\n",
-       "      <td>0.102347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Washington</td>\n",
-       "      <td>3.476398</td>\n",
-       "      <td>0.003115</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>5.314682</td>\n",
+       "      <td>0.000070</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             State  t-statistics   p-value\n",
-       "0           Alaska      0.654005  0.522399\n",
-       "1       California      1.809021  0.089276\n",
-       "2         Colorado      3.006552  0.008364\n",
-       "3            Maine      5.461477  0.000052\n",
-       "4    Massachusetts      4.255550  0.000604\n",
-       "5           Nevada      1.752150  0.098887\n",
-       "6           Oregon      2.384878  0.029802\n",
-       "7  Washington D.C.      1.732862  0.102347\n",
-       "8       Washington      3.476398  0.003115"
+       "        State  t-statistics   p-value\n",
+       "0    Colorado      2.071203  0.054870\n",
+       "1      Oregon      1.366664  0.190629\n",
+       "2  Washington      2.743740  0.014418\n",
+       "3       Texas      5.314682  0.000070"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 783,
      "metadata": {},
      "output_type": "execute_result"
     }
